@@ -1,3 +1,10 @@
+2006-12-29  Michael Yount <minkel07@verizon.net>
+
+	* lib/Majordomo.pm:  Update the version number.
+
+	* lib/Mj/Archive.pm:  (_sync_msgs)  Adjust archive numbers if
+	duplicates are found.  Suggested by Roger Klorese.
+
 2006-12-29  Michael Yount <csf@moscow.com>
 
 	* postinstall:  Remove reference to mj_resend.
